# claude-tdd-pro

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .lsp.json  .mcp.json  .pre-commit-config.yaml  .shellcheckrc  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMERCIAL-USE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MAINTAINERS.md  QUALITY-BAR.md  QUICKSTART.md  README.md  RECRUITING.md  SECURITY.md  package.json
.claude/: settings.json
.claude-plugin/: plugin.json
.claude-tdd-pro/: COMPLIANCE-URLS.yaml
.devcontainer/: devcontainer.json
agents/: _runner.sh  architect.md  critical-path-verifier.md  fresh-eyes-review.md  parallel-coordinator.md  pr-pattern-extractor.md  pr-review-conversational.md  pr-self-reviewer.md  review-compliance.md  review-correctness.md  review-deps.md  review-google-style.md  review-node-boundaries.md  review-node-observability.md  review-observability.md  review-performance.md  review-react-a11y.md  review-react-rsc.md  review-security.md  review-types.md  review-verifier.md  spec-writer.md  standards-comparator.md  strict-test-writer.md  tdd-driver.md  ui-regression-pinner-trigger.sh  ui-regression-pinner.md  ui-regression-pinner.sh  validate-contract.sh  validate-findings.sh
ci/: .gitlab-ci.template.yml  pre-commit-hooks.yaml
commands/: acquire-technology-live.sh  acquire-technology-rules.sh  adr.md  agent-continuity.sh  agent-verify.sh  analyze.md  analyze.sh  architect-recommend.sh  architect-session.sh  architect.md  architect.sh  audit-pack-emit.sh  audit-pack.sh  aws-boundary.sh  azure-boundary.sh  business-intake.sh  business-translate.sh  cl-status.sh  classify-path.sh  classify-rule.sh  claude-version-detect.sh  cloud-adr.sh  cloud-build.sh  cloud-conventions.sh  codesign-build.sh  compliance-add.sh  compliance-attest.sh  compliance-remove.sh  component-add.sh  config-sync.sh  config.sh  cost-report.sh  coverage.sh  curriculum-digest.sh  curriculum-progress.sh  curriculum-study.sh  cvd-record.sh  decision-package.sh  doctor.md  doctor.sh  (+102 more)
community/: REVIEW.md  promote.sh  validate.sh
compatibility/: claude-code-versions.yaml
compliance/: aibom-emit.sh  aibom.sh  audit-log.sh  audit-pack-schema.json  audit-recover.sh  auto-refresh-daily.sh  checkpoint-list.sh  checkpoint-verify.sh  checkpoint.sh  closed-loop-test.sh  closed-loop-validate.sh  compliance-report.sh  consumption-trace.sh  control-mapping-gate.sh  cross-loop-cite.sh  emit-provenance-manifest.sh  eo-control-mapping.yaml  fetcher.sh  freshness-gate.sh  licenses.yaml  merge-registry.sh  provenance-emit.sh  sync-from-sources.sh  validate-consumption-schema.sh  validate-provenance-manifest.sh  validate-source-contract.sh
cross-loop/: emit.sh  validate-tag.sh
design-tokens/: registry.yaml
docs/: ARCHITECTURE.md  CLAUDE_CODE_COMPATIBILITY.md  CONTRACT_PRIORITIES.md  DAY1_MAINTAINER.md  DEMO.md  FIRST_PRINCIPLES.md  FITNESS_FUNCTIONS.md  GROK_INTEGRATION_PLAN.md  (+38 more)
scaffolds/python-fastapi/: pyproject.toml
templates/: COMMIT_MESSAGE.md  CONVENTIONS.md  PR_BODY.md  conftest.py  eslint.config.flat.js  eslint.config.flat.react.js  playwright.config.ts  prettierrc.json  pyproject.toml  size-limit.config.js  test-setup.js  tsconfig.checkjs.json  tsconfig.strict.json  vitest.config.with-cleanup.js  vitest.react.config.ts
(+6034 files in other folders)
